Fix Gap Issues In 100% screen and Small Windows

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ main {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1rem;
+    margin-right: 3rem;
 }
 
 .first-row{
@@ -44,9 +45,6 @@ main {
 .display-screen {
     position: absolute;
     right: 0;
-}
-
-.display-screen {
     color: white;
     font-size: 54px;
     margin-right: 0.5rem;
@@ -59,6 +57,7 @@ main {
     height: 100%;
     width: 100%;
     position: relative;
+    margin-right: 3rem;
 }
 
 .last-two {
